--- a/configs/leona-apiserver.bak.yaml
+++ b/configs/leona-apiserver.bak.yaml
@@ -24,14 +24,14 @@ server:
 
 # GRPC 服务配置
 grpc:
-  bind-address: 0.0.0.0 # grpc 安全模式的 IP 地址，默认 0.0.0.0
-  bind-port: 8081 # grpc 安全模式的端口号，默认 8081
+  bind-address: ${LEONA_APISERVER_GRPC_BIND_ADDRESS} # grpc 安全模式的 IP 地址，默认 0.0.0.0
+  bind-port: ${LEONA_APISERVER_GRPC_BIND_PORT} # grpc 安全模式的端口号，默认 8081
 
-# HTTP 配置
-insecure:
-  bind-address: ${LEONA_APISERVER_INSECURE_BIND_ADDRESS} # 绑定的不安全 IP 地址，设置为 0.0.0.0 表示使用全部网络接口，默认为 127.0.0.1
-  bind-port: ${LEONA_APISERVER_INSECURE_BIND_PORT} # 提供非安全认证的监听端口，默认为 8080
-
+## HTTP 配置
+#insecure:
+#  bind-address: ${LEONA_APISERVER_INSECURE_BIND_ADDRESS} # 绑定的不安全 IP 地址，设置为 0.0.0.0 表示使用全部网络接口，默认为 127.0.0.1
+#  bind-port: ${LEONA_APISERVER_INSECURE_BIND_PORT} # 提供非安全认证的监听端口，默认为 8080
+#
 ## HTTPS 配置
 #secure:
 #  bind-address: ${LEONA_APISERVER_SECURE_BIND_ADDRESS} # HTTPS 安全模式的 IP 地址，默认为 0.0.0.0
@@ -45,10 +45,10 @@ insecure:
 
 # MySQL 数据库相关配置
 mysql:
-  host: db.rcrai-dev.sico.io:32102 # MySQL 机器 ip 和端口，默认 127.0.0.1:3306
-  username: root # MySQL 用户名(建议授权最小权限集)
-  password: ur05JLQTkkWxfLqDhrLy0JC8 # MySQL 用户密码
-  database: kanban-etl-plus # leona 系统所用的数据库名
+  host: ${MARIADB_HOST} # MySQL 机器 ip 和端口，默认 127.0.0.1:3306
+  username: ${MARIADB_USERNAME} # MySQL 用户名(建议授权最小权限集)
+  password: ${MARIADB_PASSWORD} # MySQL 用户密码
+  database: ${MARIADB_DATABASE} # leona 系统所用的数据库名
   max-idle-connections: 100 # MySQL 最大空闲连接数，默认 100
   max-open-connections: 100 # MySQL 最大打开的连接数，默认 100
   max-connection-life-time: 10s # 空闲连接最大存活时间，默认 10s
@@ -85,8 +85,8 @@ log:
   enable-color: true # 是否开启颜色输出，true:是，false:否
   disable-caller: false # 是否开启 caller，如果开启会在日志中显示调用日志所在的文件、函数和行号
   disable-stacktrace: false # 是否再panic及以上级别禁止打印堆栈信息
-  output-paths: /Users/dairongpeng/workspace/go-workspace/leona/leona-apiserver.log,stdout # 支持输出到多个输出，逗号分开。支持输出到标准输出（stdout）和文件。
-  error-output-paths: /Users/dairongpeng/workspace/go-workspace/leona/leona-apiserver.error.log # zap内部(非业务)错误日志输出路径，多个输出，逗号分开
+  output-paths: ${LEONA_LOG_DIR}/leona-apiserver.log,stdout # 支持输出到多个输出，逗号分开。支持输出到标准输出（stdout）和文件。
+  error-output-paths: ${LEONA_LOG_DIR}/leona-apiserver.error.log # zap内部(非业务)错误日志输出路径，多个输出，逗号分开
 
 feature:
   enable-metrics: true # 开启 metrics, router:  /metrics
