--- a/configs/leona-apiserver.yaml
+++ b/configs/leona-apiserver.yaml
@@ -19,7 +19,7 @@
 server:
   mode: debug # server mode: release, debug, test，默认 release
   healthz: true # 是否开启健康检查，如果开启会安装 /healthz 路由，默认 true
-  middlewares: recovery,logger,secure,nocache,cors,dump # 加载的 gin 中间件列表，多个中间件，逗号(,)隔开
+  middlewares: recovery,logger,nocache # 加载的 gin 中间件列表，多个中间件，逗号(,)隔开
   max-ping-count: 3 # http 服务启动后，自检尝试次数，默认 3
 
 # GRPC 服务配置
@@ -29,8 +29,8 @@ grpc:
 
 # HTTP 配置
 insecure:
-  bind-address: ${LEONA_APISERVER_INSECURE_BIND_ADDRESS} # 绑定的不安全 IP 地址，设置为 0.0.0.0 表示使用全部网络接口，默认为 127.0.0.1
-  bind-port: ${LEONA_APISERVER_INSECURE_BIND_PORT} # 提供非安全认证的监听端口，默认为 8080
+  bind-address: 127.0.0.1 # 绑定的不安全 IP 地址，设置为 0.0.0.0 表示使用全部网络接口，默认为 127.0.0.1
+  bind-port: 8080 # 提供非安全认证的监听端口，默认为 8080
 
 ## HTTPS 配置
 #secure:
@@ -45,10 +45,10 @@ insecure:
 
 # MySQL 数据库相关配置
 mysql:
-  host: db.rcrai-dev.sico.io:32102 # MySQL 机器 ip 和端口，默认 127.0.0.1:3306
+  host: 127.0.0.1:3306 # MySQL 机器 ip 和端口，默认 127.0.0.1:3306
   username: root # MySQL 用户名(建议授权最小权限集)
-  password: ur05JLQTkkWxfLqDhrLy0JC8 # MySQL 用户密码
-  database: kanban-etl-plus # leona 系统所用的数据库名
+  password: abc123 # MySQL 用户密码
+  database: leona # leona 系统所用的数据库名
   max-idle-connections: 100 # MySQL 最大空闲连接数，默认 100
   max-open-connections: 100 # MySQL 最大打开的连接数，默认 100
   max-connection-life-time: 10s # 空闲连接最大存活时间，默认 10s
